--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="wrapisi">
             <img src="assets/img/img2.jpg" alt="">
             <div class="isi">
-                <p>Dean lahir di Bontang, Sumatera Utara, pada tanggal 16 September. Sejak masa SMA, ia mulai tertarik pada teknologi, terutama dalam bidang kecerdasan buatan (AI). Ketertarikan ini mengarahkannya untuk memilih Universitas Negeri Medan (Unimed) sebagai tempat melanjutkan pendidikan, dengan fokus pada program studi Ilmu Komputer. Di Unimed, ia berharap dapat memperdalam pemahaman dan keahlian dalam teknologi dan AI, serta menjadikannya sebagai fondasi karier di masa depan.</p>
+                <p>Dean lahir di Bontang, Kalimantan Timur, pada tanggal 16 September. Sejak masa SMA, ia mulai tertarik pada teknologi, terutama dalam bidang kecerdasan buatan (AI). Ketertarikan ini mengarahkannya untuk memilih Universitas Negeri Medan (Unimed) sebagai tempat melanjutkan pendidikan, dengan fokus pada program studi Ilmu Komputer. Di Unimed, ia berharap dapat memperdalam pemahaman dan keahlian dalam teknologi dan AI, serta menjadikannya sebagai fondasi karier di masa depan.</p>
             </div>
         </div>
         </div>
